# luban

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  justfile  justfile.win
.github/workflows/: ci.yml  nightly-release.yml  release.yml
crates/luban_api/: Cargo.toml
crates/luban_api/src/: lib.rs
crates/luban_app/: Cargo.toml
crates/luban_app/agent_sidecar/: package-lock.json  package.json  run.mjs
crates/luban_app/src/: app_assets.rs  main.rs  services.rs  sqlite_store.rs
crates/luban_app/src/services/: context_blobs.rs  conversations.rs
crates/luban_backend/: Cargo.toml
crates/luban_backend/migrations/: 0001_init.sql  0002_conversation_keys.sql  0003_app_settings.sql  0004_project_expanded.sql  0005_threaded_conversations.sql  0006_app_settings_text.sql  0007_project_archived.sql  0012_conversation_queue.sql  0014_conversation_run_config.sql  0016_conversation_task_status.sql  0019_conversation_task_status_auto_update.sql  0021_cleanup_autocreated_thread1.sql  0022_new_task_drafts.sql
crates/luban_backend/src/: env.rs  lib.rs  services.rs  sqlite_store.rs  test_support.rs  time.rs
crates/luban_backend/src/services/: amp_cli.rs  amp_mode.rs  cancel_killer.rs  claude_cli.rs  claude_process.rs  cli_check.rs  codex_bin.rs  codex_cli.rs  codex_thread.rs  config_entries.rs  config_file_io.rs  config_tree.rs  context_blobs.rs  conversations.rs  droid_cli.rs  feedback.rs  git.rs  github_url.rs  open_command.rs  prompt.rs  pull_request.rs  reconnect_notice.rs  roots.rs  task.rs  test_support.rs  thread_io.rs  workspace_name.rs
crates/luban_domain/: Cargo.toml
crates/luban_domain/src/: actions.rs  adapters.rs  agent_settings.rs  agent_thread.rs  chat_draft.rs  codex.rs  context_tokens.rs  dashboard.rs  effects.rs  lib.rs  paths.rs  persistence.rs  reducer.rs  state.rs  system_prompts.rs  task_prompts.rs  time.rs
crates/luban_server/: Cargo.toml
crates/luban_server/src/: auth.rs  branch_watch.rs  engine.rs  git_changes.rs  idempotency.rs  lib.rs  main.rs  mentions.rs  pty.rs  server.rs  telegram.rs
crates/luban_server/tests/: auth_bootstrap.rs  contracts_http.rs  contracts_progress_sync.rs  contracts_ws_events_agent_settings.rs  contracts_ws_events_terminal_command.rs  ws_resync.rs
crates/luban_tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/luban_tauri/capabilities/: main.json
crates/luban_tauri/icons/: icon.icns
crates/luban_tauri/src/: macos_process_name.rs  main.rs  path_env.rs
crates/luban_ui/: Cargo.toml
crates/luban_ui/src/: lib.rs  root.rs  selectable_text.rs  theme.rs
crates/luban_ui/src/root/: attachments.rs  chat_input.rs  dashboard.rs  gh.rs  layout.rs  right_pane.rs  sidebar.rs  tests.rs  thread_tabs.rs  titlebar.rs
crates/luban_ui/src/root/attachments/: mod.rs
crates/luban_ui/src/root/chat/: composer.rs  composer_view.rs  input.rs  mod.rs
design/: .gitignore  AGENTS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
design/app/: globals.css  layout.tsx  page.tsx
design/components/: agent-ide.tsx  chat-panel.tsx  feedback-modal.tsx  kanban-board.tsx  new-task-modal.tsx  right-sidebar.tsx  settings-panel.tsx  sidebar.tsx
design/components/shared/: activity-item.tsx  agent-selector.tsx  chat-message.ts  message-editor.tsx  open-button.tsx  status-indicator.tsx  worktree.ts
dev/: Cargo.toml
dev/src/: main.rs
dev/tests/: web_mock_task_execute_creates_workspace.rs
docs/: README.md  agent-cancel-resume.md  agent-runner-integration.md  agent-thread-events.md  amp-support.md  base16-theme.md  claude-code.md  codex-cli.md  context-tokens.md  cs-web-architecture.md  cs-web-quickstart.md  dashboard.md  decisions.md  persistence.md  provider-logos.md  release-ci.md  task-and-turn-status.md  terminal.md  ui-design-parity.md  ui-testing.md  workspace-thread-tabs.md
docs/contracts/: README.md  progress.md
docs/contracts/features/: c-auth-single-user.md  (+19 more)
docs/migrations/: 2026-01-22-web-mock-mode-contracts.md
postmortem/: 2026-01-chat-model-effort-noop.md  2026-01-e2e-parallel-flakiness.md  2026-01-engine-missing-effect-handlers.md  2026-01-ghostty-web-clipboard-overwrite.md  2026-01-gpui-blocks-reflow.md  2026-01-gpui-terminal-cursor-visibility.md  2026-01-kanban-main-worktree-missing.md  2026-01-project-dedupe-and-github-reuse.md  2026-01-streaming-markdown-missing.md  2026-01-task-intent-inference-output.md  2026-01-tauri-zoom-capability.md  2026-01-terminal-clipboard-shortcuts.md  2026-01-thinking-steps-miscount.md  2026-01-ws-connected-stale.md  2026-02-duplicate-thread-1-backlog-task.md  2026-02-startup-blocked-by-auto-archive.md  README.md
tools/codex_sidecar/: package-lock.json  package.json
web/: .gitignore  AGENTS.md  package.json  playwright.config.ts  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: activity-stream.tsx  add-project-modal.tsx  agent-ide.tsx  chat-composer.tsx  chat-panel.tsx  conversation-view.tsx  diff-tab-panel.tsx  feedback-modal.tsx  global-sequence-shortcuts.tsx  global-zoom-shortcuts.tsx  inbox-view.tsx  kanban-board.tsx  luban-ide.tsx  luban-sidebar.tsx  markdown.tsx  new-task-drafts-dialog.tsx  new-task-modal.tsx  pty-terminal.tsx  queued-prompts.tsx  right-sidebar.tsx  settings-panel.tsx  sidebar.tsx  task-activity-panel.tsx  task-activity-view.tsx  task-detail-view.tsx  task-list-view.tsx  thread-tabs-bar.tsx  virtualized-conversation-view.tsx  windowed-list.tsx  workspace-chat-header.tsx
web/docs/: design-system.md  linear-activity-spec.md
web/lib/: activity-timing.ts  add-project-and-open.ts  agent-settings.ts  conversation-pagination.ts  conversation-ui.ts  external-link-interceptor.ts  font-family.ts  global-zoom.ts  kanban-view-model.ts  luban-actions.ts  luban-api.ts  luban-context.tsx  luban-http.ts  luban-store-events.ts  luban-thread-flow.ts  luban-transport.ts  new-task-drafts.ts  open-external-url.ts  open-settings.ts  sidebar-view-model.ts  thread-ui.ts  ui-prefs.ts  use-agent-cancel-hotkey.ts  use-thread-tabs.ts  worktree-ui.ts
web/styles/: globals.css
web/workers/: pierre-diffs-worker.ts
(+71 files in other folders)
