[workspace]
resolver = "2"
members = [
    "crates/luban_app",
    "crates/luban_api",
    "crates/luban_backend",
    "crates/luban_domain",
    "crates/luban_server",
    "crates/luban_tauri",
    "crates/luban_ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-channel = "2"
blake3 = "1"
bip39 = "2"
gpui = { git = "https://github.com/zed-industries/zed", default-features = false, features = ["font-kit"] }
# Pin gpui-component to a revision that matches the current gpui API.
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", rev = "36390d153f1692ce76be4f777130536d42f18e95" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git", rev = "36390d153f1692ce76be4f777130536d42f18e95" }
ghostty_vt = { git = "https://github.com/Xuanwo/gpui-ghostty", package = "ghostty_vt", rev = "47a6fd4" }
gpui_ghostty_terminal = { git = "https://github.com/Xuanwo/gpui-ghostty", package = "gpui_ghostty_terminal", rev = "47a6fd4" }
portable-pty = "0.9"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
