[workspace]
resolver = "2"
members = [
    "crates/luban_api",
    "crates/luban_backend",
    "crates/luban_domain",
    "crates/luban_cli",
    "crates/luban_server",
    "crates/luban_tauri",
]

[workspace.package]
version = "42.7.20"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-channel = "2"
blake3 = "1"
bip39 = "2"
portable-pty = "0.9"
rand = "0.8"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
