[package]
name = "luban_dev"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
opendal = { version = "0.54", features = ["services-s3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
