[package]
name = "luban_app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bip39.workspace = true
gpui.workspace = true
gpui-component.workspace = true
luban_domain = { path = "../luban_domain" }
luban_ui = { path = "../luban_ui" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
