[package]
name = "luban_app"
version.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
gpui_ghostty_terminal.workspace = true
luban_backend = { path = "../luban_backend" }
luban_domain = { path = "../luban_domain" }
luban_ui = { path = "../luban_ui" }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
