[package]
name = "luban_backend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bip39.workspace = true
blake3.workspace = true
image.workspace = true
luban_domain = { path = "../luban_domain" }
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

