[package]
name = "luban_server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
futures = "0.3"
luban_api = { path = "../luban_api" }
luban_backend = { path = "../luban_backend" }
luban_domain = { path = "../luban_domain" }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.17"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio-tungstenite = "0.28"
