[package]
name = "luban_tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
luban_server = { path = "../luban_server" }
open = "5"
rfd = "0.17"
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
