[package]
name = "luban_ui"
version.workspace = true
edition.workspace = true

[dependencies]
async-channel.workspace = true
gpui.workspace = true
gpui-component.workspace = true
luban_domain = { path = "../luban_domain" }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
